Java 8 compatibility changes